--- a/css/style.css
+++ b/css/style.css
@@ -2001,8 +2001,9 @@ input[type="radio"].visually-hidden {
 .catalog-item h3 {
   min-height: 40px;
   margin: 0;
-  margin-bottom: 12px;
+  margin-bottom: auto;
   padding: 0 25px;
+  padding-bottom: 12px;
 
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
